--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Moamen's site</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" >
-  <link href="style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moamen Shaban's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello to Moamen Shaban Website!</h1>
-  <p>Welcome to my website. Here I will display all the skills I have acquired in my life and which I learn daily, the certificates I have obtained throughout my life, my experiences and all the projects I have worked on and will work on in the future.</p>
+    <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+            <li><a href="#framework">Framework</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact Me</a></li>
+        </ul>
+    </nav>
 
-  <script src="script.js"></script>
+    <!-- Banner Section -->
+    <header id="home" class="banner">
+        <div class="banner-content">
+            <h1>Welcome to Moamen Shaban's Portfolio</h1>
+            <p>Application Developer with a passion for innovative digital solutions</p>
+            <a href="#projects" class="banner-button">View My Projects</a>
+        </div>
+    </header>
+
+    <!-- Other sections will go here -->
+
+    <!-- Applications Developer Section -->
+<section id="applications-developer" class="section">
+  <div class="section-content">
+      <h2>Applications Developer</h2>
+      <p>
+          With a strong foundation in software development, I excel at creating efficient and innovative digital solutions. My experience spans a wide range of technologies, including front-end and back-end development, database management, and cloud platforms. I am adept at collaborating with cross-functional teams to deliver seamless, user-focused applications, and I am committed to continuous learning and adopting emerging technologies to meet modern business needs. With a methodical approach to software engineering, I ensure high-quality code, efficient project management, and an excellent user experience.
+      </p>
+  </div>
+</section>
+
+
 </body>
 </html>
