Test adding border

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <!-- Applications Developer Section -->
 <section id="applications-developer" class="section">
   <div class="section-content">
-      <h2>Applications Developer</h2>
+      <h2>Application Developer</h2>
       <p>
           With a strong foundation in software development, I excel at creating efficient and innovative digital solutions. My experience spans a wide range of technologies, including front-end and back-end development, database management, and cloud platforms. I am adept at collaborating with cross-functional teams to deliver seamless, user-focused applications, and I am committed to continuous learning and adopting emerging technologies to meet modern business needs. With a methodical approach to software engineering, I ensure high-quality code, efficient project management, and an excellent user experience.
       </p>
   </div>
 </section>
 
-
+<h6>&copy; Copyright. All Rights Reserved.</h6>
 </body>
 </html>
